# QtTest

./: CMakeLists.txt  widget.h
Sources/: main.cpp  mainwindow.cpp
Sources/Forms/: mainwindow.ui
Sources/Headers/: mainwindow.h
